--- a/.github/workflows/data_generation_and_dvc.yml
+++ b/.github/workflows/data_generation_and_dvc.yml
@@ -2,7 +2,7 @@ name: Continuous Data Generation and DVC Tracking
 
 on:
   schedule:
-    - cron: '*/5 * * * *'  # This example runs every 4 hours, adjust as needed
+    - cron: '*/5 * * * *'
 
 jobs:
   generate_and_track_data:
@@ -15,30 +15,30 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v2
       with:
-        python-version: '3.8'  # Replace with your Python version
+        python-version: '3.8'
 
     - name: Install dependencies
       run: |
         pip install pandas numpy
-        pip install dvc  # Add any other dependencies of your script
+        pip install dvc
 
     - name: Generate Data
-      run: python random_data.py  # Assuming the script is in the root
+      run: python random_data.py
 
     - name: DVC Add
       run: |
-        dvc add dummy_sensor_data.csv  # Assuming the CSV is in the root
+        dvc add dummy_sensor_data.csv
 
     - name: Commit changes
       run: |
-        git config --global user.name 'Abdul-Rehman04'
-        git config --global user.email 'i191886@nu.edu.pk'
+        git config --global user.name 'github-actions'
+        git config --global user.email 'github-actions@github.com'
         git add dummy_sensor_data.csv.dvc .gitignore
         git commit -m "Update dataset [skip ci]"
 
     - name: Push changes
       run: |
-        git config --global user.name 'Abdul-Rehman04'
-        git config --global user.email 'i191886@nu.edu.pk'
-        git -c http.extraHeader="AUTHORIZATION: basic ${GH_PAT}" push
+        git push --set-upstream origin HEAD:main
         dvc push
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
