--- a/.github/workflows/data_generation_and_dvc.yml
+++ b/.github/workflows/data_generation_and_dvc.yml
@@ -2,7 +2,7 @@ name: Continuous Data Generation and DVC Tracking
 
 on:
   schedule:
-    - cron: '*/5 * * * *'  # Adjust the schedule as needed
+    - cron: '* */23 * * *'  # This example runs every 5 minutes, adjust as needed
 
 jobs:
   generate_and_track_data:
@@ -20,7 +20,7 @@ jobs:
     - name: Install dependencies
       run: |
         pip install pandas numpy
-        pip install dvc  # Add any other dependencies of your script
+        pip install dvc
 
     - name: Generate Data
       run: python random_data.py  # Assuming the script is in the root
@@ -29,16 +29,21 @@ jobs:
       run: |
         dvc add dummy_sensor_data.csv  # Assuming the CSV is in the root
 
-    - name: Commit changes
+    - name: Commit DVC files
       run: |
         git config --global user.name 'Abdul-Rehman04'
         git config --global user.email 'i191886@nu.edu.pk'
         git add dummy_sensor_data.csv.dvc .gitignore
         git commit -m "Update dataset [skip ci]"
 
-    - name: Push changes
+    - name: Push Git changes
       run: |
-        git config --global user.name 'Abdul-Rehman04'
-        git config --global user.email 'i191886@nu.edu.pk'
-        git -c http.extraHeader="AUTHORIZATION: basic $(echo -n Abdul-Rehman04:${{ secrets.GH_PAT }} | base64)" push
-        dvc push
+        git push
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+    - name: DVC Push
+      run: dvc push
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        GOOGLE_APPLICATION_CREDENTIALS_DATA: ${{ secrets.GOOGLE_APPLICATION_CREDENTIALS_DATA }}
