--- a/.github/workflows/data_generation_and_dvc.yml
+++ b/.github/workflows/data_generation_and_dvc.yml
@@ -2,7 +2,7 @@ name: Continuous Data Generation and DVC Tracking
 
 on:
   schedule:
-    - cron: '* */23 * * *'  # This example runs every 5 minutes, adjust as needed
+    - cron: '*/1 * * * *'  # This example runs every 5 minutes, adjust as needed
 
 jobs:
   generate_and_track_data:
@@ -31,8 +31,8 @@ jobs:
 
     - name: Commit DVC files
       run: |
-        git config --global user.name 'Abdul-Rehman04'
-        git config --global user.email 'i191886@nu.edu.pk'
+        git config --global user.name 'github-actions'
+        git config --global user.email 'github-actions@github.com'
         git add dummy_sensor_data.csv.dvc .gitignore
         git commit -m "Update dataset [skip ci]"
 
@@ -44,6 +44,6 @@ jobs:
 
     - name: DVC Push
       run: dvc push
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        GOOGLE_APPLICATION_CREDENTIALS_DATA: ${{ secrets.GOOGLE_APPLICATION_CREDENTIALS_DATA }}
+      # env:
+      #   # GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      #   # GOOGLE_APPLICATION_CREDENTIALS_DATA: ${{ secrets.GOOGLE_APPLICATION_CREDENTIALS_DATA }}
