Updating Workflow schedule to every 3 minutes

--- a/.github/workflows/data_generation_and_dvc.yml
+++ b/.github/workflows/data_generation_and_dvc.yml
@@ -40,10 +40,10 @@ jobs:
       run: |
         git push
       env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        GITHUB_TOKEN: ${{ secrets.GH_PAT }}
 
     - name: DVC Push
       run: dvc push
       # env:
-      #   # GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      #   # GITHUB_TOKEN: ${{ secrets.GH_PAT }}
       #   # GOOGLE_APPLICATION_CREDENTIALS_DATA: ${{ secrets.GOOGLE_APPLICATION_CREDENTIALS_DATA }}
